tests/testdata/npm/types_no_types_entry/main.out
[UNORDERED_START]
Download http://localhost:4260/@denotest/types-no-types-entry
Download http://localhost:4260/@denotest/types-entry-value-not-exists
[UNORDERED_END]
[UNORDERED_START]
Download http://localhost:4260/@denotest/types-entry-value-not-exists/1.0.0.tgz
Download http://localhost:4260/@denotest/types-no-types-entry/1.0.0.tgz
[UNORDERED_END]
Check file://[WILDCARD]/types_no_types_entry/main.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const result: string = getValue();
      ~~~~~~
    at file:///[WILDCARD]/main.ts:4:7
