tests/testdata/npm/types_no_types_entry/main.ts
import { getValue } from "npm:@denotest/types-no-types-entry";

// should error here
const result: string = getValue();
console.log(result);
